k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: institucional-web-service
  namespace: institucional
spec:
  selector:
    app: institucional
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
