k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: institucional-web-ingress
  namespace: institucional
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: avocadotech.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: institucional-web-service
            port:
              number: 3000
